<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ChallengeActivity">

    <TextView
        android:id="@+id/q_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/q_header"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/question_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/question_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/question_bg"
        android:padding="16dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/q_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Which file extension is used to save Kotlin files." />


    <RadioGroup
        android:id="@+id/answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_title">

    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/submit_button_cta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/answers"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>